src/test/success/reassigning_parameter.egern
func hello(a: int, b: int): int {
    a = b
    return a
}
print(hello(3, 4))
