src/test/fail/too_few_args_fail.egern
func abc(a: int, b: int, c: int): int {
    print(a)
    var x = b
    return c
}

var x = 3
print(abc(2, x))
